# Got-SVN

./: .travis.yml  README.md  index.md
client/: .gitignore  CMakeLists.txt
client/archivos_json/: enviado.json  recibido.json
client/include/: client.hpp  commands.hpp  controlServerCliente.hpp  huffman.hpp
client/repo/: CMakeLists.txt  main.cpp  test.json  test.patch  testAfter.cpp  testBefore.cpp
client/repo/folder/: textfile.txt
client/src/: client.cpp  commands.cpp  controlServerCliente.cpp  diff.cpp  huffman.cpp  main.cpp  md5.cpp
server/: Dockerfile  docker-compose.yml  index.js  package-lock.json  package.json
server/db/: database.sql
server/src/: index.js
server/src/routes/: database_got.js  employees.js
